Address review and enable continuous delivery